@@ -1,3 +1,14 @@
+2003-01-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* plot.h (cliptorange): New macro to simplify clipping in the
+ 	presence of possibly reverted axis ranges.
+
+	* graphics.c (histeps_horizontal, histeps_vertical,
+ 	edge_intersect_steps, edge_intersect_fsteps,
+ 	two_edge_intersect_steps, two_edge_intersect_fsteps): Rewritten
+ 	clipping part to survive reversed axis ranges.
+	(two_edge_intersect): Dito, but only in a relatively minor way.
+
 2002-12-12  Lars Hecking  <lhecking@nmrc.ucc.ie>
 
 	* term/gif.trm, term/png.trm: Petr's typo fixes.
